# ros-gantry

./: .gitignore  ARCHITECTURE.md  INDEX.md  PROJECT.md  QUICKSTART.md  README.md  package.xml  setup.sh
config/: gantry.rviz
dnb_gantry_simulator/: .gitignore  CMakeLists.txt  README_PACKAGE.md  package.xml
dnb_gantry_simulator/fnb/: gantry_move.json
dnb_gantry_simulator/include/dnb_gantry_simulator/: gantry_controller.h  gantry_driver.h
dnb_gantry_simulator/launch/: rviz.launch  start.launch  stop.launch
dnb_gantry_simulator/meshes/gantry/collision/: gantry.txt
dnb_gantry_simulator/meshes/gantry/visual/: base.dae  gantry.txt  x_carriage.dae
dnb_gantry_simulator/module_config/: module.yaml
dnb_gantry_simulator/module_config/config/: standard.yaml
dnb_gantry_simulator/module_config/robot/: gantry.yaml  standard.yaml
dnb_gantry_simulator/scripts/: kill_tool_manager.sh  move_example.py
dnb_gantry_simulator/src/: gantry_controller.cpp  gantry_driver.cpp  gantry_node.cpp
dnb_gantry_simulator/test/: identifier_list.json
dnb_gantry_simulator/urdf/: gantry.urdf
gantry_robot/: CMakeLists.txt  package.xml
gantry_robot/config/: controllers.yaml
gantry_robot/launch/: gazebo.launch
gantry_robot/src/: ascii_visualizer.py  demo.py  interactive_control.py  motion_example.py  pick_and_place_example.py  simple_simulator.py  urdf_viewer.py  visualizer.py
gantry_robot/urdf/: gantry_robot.urdf
gantry_robot/worlds/: gantry_robot.world  gantry_simulation.world  gantry_workspace.world
launch/: gazebo.launch  start.launch
module_config/error_codes/: error_code_table.csv
module_config/robot/: gantry.yaml
scripts/: kill_tool_manager.sh  marker_init_sync.py  pick_and_place_example.py
src/: gantry_controller.cpp  gantry_driver.cpp
srv/: MoveGantry.srv
urdf/: gantry.urdf
