<?xml version="1.0"?>
<package>
  <name>dnb_gantry_simulator</name>
  <version>1.0.0</version>
  <description>Gantry robot simulator for drag and bot</description>
  <maintainer email="dev@dragandbot.com">Developer</maintainer>
  <license>Copyright drag and bot GmbH</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>dnb_msgs</build_depend>
  <build_depend>industrial_msgs</build_depend>
  <build_depend>robot_movement_interface</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>dnb_msgs</run_depend>
  <run_depend>industrial_msgs</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>joint_state_publisher_gui</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>robot_movement_interface</run_depend>
  <run_depend>rviz</run_depend>
</package>
